<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">人像抠图</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="pick_file">选择图片文件</string>
    <string name="preferences">首选项</string>
    <string name="camera_category">相机</string>
    <string name="default_camera_face">默认摄像头</string>
    <string name="segmentation_category">抠图</string>
    <string name="segmentation_network">图像分割网络</string>
    <string name="fp16_quantization">FP16 量化</string>
    <string name="fp16_quantization_summary">通过牺牲部分精度，加速推理过程</string>
    <string name="int8_quantization">INT8 量化</string>
    <string name="int8_quantization_summary">通过牺牲部分精度，加速推理过程</string>
    <string name="use_gpu">使用 GPU 进行推理</string>
    <string name="use_gpu_summary">需要硬件支持</string>
    <string name="power_mode">NCNN 性能模式</string>
    <string name="select_background">选择背景</string>
    <string name="share">分享</string>
    <string name="save">保存</string>
    <string name="share_via" tools:ignore="TypographyEllipsis">分享...</string>
    <string name="inference_cost_time">推理耗时: </string>
    <string name="saved_to">保存为: </string>
</resources>
